// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateMonolithic() should generate a monolithic application configuration 1`] = `
[
  "app.routes.ts",
  "layout.routes.ts",
  "app.navigation.ts",
]
`;

exports[`generateMonolithic() should generate a monolithic application configuration 2`] = `
"import { Route } from '@angular/router';
import { STATUS_CHECK_ROUTE } from '@rxap/ngx-status-check';

export const appRoutes: Route[] = [{
    path: '',
    loadChildren: () => import('./layout.routes')
  }, STATUS_CHECK_ROUTE,{
    path: '**',
    redirectTo: ''
  }];

export default appRoutes;
"
`;

exports[`generateMonolithic() should generate a monolithic application configuration 3`] = `
"import { provideLayout, withNavigationConfig, withDefaultHeaderComponent, LayoutComponent } from '@rxap/layout';
import { APP_NAVIGATION } from './app.navigation';
import { Route } from '@angular/router';

export const ROUTES: Route[] = [
    {
      path: '',
      component: LayoutComponent,
      children: [
        {
          path: '**',
          redirectTo: ''
        }
      ],
      providers: [
        provideLayout(
          withNavigationConfig(APP_NAVIGATION),
          withDefaultHeaderComponent(),
        )
      ]
    },
  {
    path: '**',
    redirectTo: ''
  }
  ];

export default ROUTES;
"
`;

exports[`generateMonolithic() should generate a monolithic application configuration 4`] = `
"import { NavigationWithInserts, RXAP_NAVIGATION_CONFIG } from '@rxap/layout';

export const APP_NAVIGATION: () => NavigationWithInserts = () => [];
"
`;

exports[`generateMonolithic() should use MinimalLayoutComponent and no navigation when moduleFederation is host 1`] = `
[
  "app.routes.ts",
  "layout.routes.ts",
]
`;

exports[`generateMonolithic() should use MinimalLayoutComponent and no navigation when moduleFederation is host 2`] = `
"import { Route } from '@angular/router';
import { STATUS_CHECK_ROUTE } from '@rxap/ngx-status-check';

export const appRoutes: Route[] = [{
    path: '',
    loadChildren: () => import('./layout.routes')
  }, STATUS_CHECK_ROUTE,{
    path: '**',
    redirectTo: ''
  }];

export default appRoutes;
"
`;

exports[`generateMonolithic() should use MinimalLayoutComponent and no navigation when moduleFederation is host 3`] = `
"import { provideLayout, withDefaultHeaderComponent, MinimalLayoutComponent } from '@rxap/layout';
import { Route } from '@angular/router';

export const ROUTES: Route[] = [
    {
      path: '',
      component: MinimalLayoutComponent,
      children: [
        {
          path: '**',
          redirectTo: ''
        }
      ],
      providers: [
        provideLayout(
          withDefaultHeaderComponent(),
        )
      ]
    },
  {
    path: '**',
    redirectTo: ''
  }
  ];

export default ROUTES;
"
`;
